--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "directus-extension-computed-interface",
+	"name": "@yakubovmax213/directus-extension-computed-interface",
 	"version": "1.9.1",
 	"description": "Perform computed value based on other fields",
 	"author": {
